# test-readme

./: README.md  pyproject.toml
src/gh_readme/: __init__.py  anime_stats.py  update_recommendations.py
