[project]
name = "gh-readme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "niquests>=3.15.2",
]

[project.scripts]
anime = "gh_readme.__init__:anime_stats"
recs = "gh_readme.__init__:update_recommendations"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
